<resources>
    <string name="app_name">MUS</string>

    <!-- Inicio -->
    <string name="mensajeInicio">\nMUS</string>
    <string name="snackbarInicio">¿Visitante, Alumno, Profesor?</string>
    <string name="snackbarInicioAccion">NO LO SÉ</string>

    <string name="tituloAyuda">Bienvenido a MUS</string>
    <string name="mensajeAyuda">Secciona la forma en que utilizarás la aplicación</string>
    <string name="tituloAyudaV">Como Visitante</string>
    <string name="mensajeAyudaV">*Caracteristicas visitante*</string>
    <string name="tituloAyudaA">Como Alumno</string>
    <string name="mensajeAyudaA">*Caracteristicas Alumno*</string>
    <string name="tituloAyudaP">Como Profesor</string>
    <string name="mensajeAyudaP">*caracteristicas Profesor*</string>

    <string name="ayudaSig">Siguiente</string>
    <string name="ayudaFin">Seleccionar una opción</string>


    <!-- Alumno QR -->
    <string name="preguntaQR">\n¿Cuentas con un codigo QR?</string>
    <string name="descripcionDesarrollo">\nEsta es una versión en desarrollo,
        los codigos QR serán generados personalmente.</string>
    <string name="promptSccanner">Coloca la camara frente al codigo QR\n\n</string>
    <string name="lecturaQRCancel">Haz cancelado la lectura del codigo QR</string>


    <!-- Profesor LogIn -->
    <string name="email">Correo Electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="campoVacio">No se puede dejar este campo vacío.</string>
    <string name="correoInvalido">Formato de correo invalido.</string>

    <string name="passInvalido">La contraseña es invalida</string>
    <string name="emailInvalido">El correo electronico no existe o fue eliminado</string>
    <string name="sinRed">Ha ocurrido un error de red o del servidor</string>

    <string name="progreso_dialogo_profesor_titulo">Iniciando sesión</string>
    <string name="progreso_dialogo_profesor_mensaje">Ingresando como\n</string>


    <!-- Profesor Main -->
    <string name="profesorNoDisponible">No disponible</string>
    <string name="profesorDisponible">Disponible</string>
    <string name="enviar_notificacion">Enviar una Notificación</string>

    <!-- childs Base de datos -->
    <string name="atributo_BD_profesor_DISPONIBLE">disponible</string>
    <string name="atributo_BD_profesor_NOMBRE">nombre</string>
    <string name="atributo_BD_profesor_INFORMACION">informacion</string>

    <!-- Profesor Enviar notificaciones -->
    <string name="profesor_titulo_notificacion">Titulo</string>
    <string name="profesor_mensaje_notificación">Mensaje</string>
    <string name="profesor_boton_enviar_noti">Enviar notificación</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
