<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    tools:context="com.mus.tec.EnviarNotificaciones"
    android:id="@+id/layout_activity_enviar_notificaciones"

    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView android:src="@drawable/ic_enviar_notificacion"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/enviar_notificacion_titulo_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_editText_rojo">

                <EditText
                    android:id="@+id/enviar_notificacion_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profesor_titulo_notificacion"
                    android:textColor="@color/negro"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/enviar_notificacion_mensaje_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:errorTextAppearance="@style/error_editText_rojo"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/enviar_notificacion_mensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profesor_mensaje_notificación"
                    android:textColor="@color/negro"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/boton_enviar_notificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/verde_DARK"
                android:text="@string/profesor_boton_enviar_noti"
                android:textAllCaps="false"
                android:textColor="@color/blanco"
                android:textSize="20sp"
                android:elevation="@dimen/elevacion_boton"
                android:layout_marginBottom="30dp"/>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
